<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/tv_container"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_num" />

        <TextView
            android:id="@+id/tv_person_name"
            style="@style/Widget.ContactHeading.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:paddingTop="16dp"
            android:text="@string/person_name"
            app:layout_constraintBottom_toTopOf="@+id/tv_mobile_num"
            app:layout_constraintEnd_toStartOf="@id/iv_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_mobile_num"
            style="@style/Widget.ContactBody.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="16dp"
            android:text="@string/mobile_num"
            app:layout_constraintBottom_toTopOf="@+id/materialDivider"
            app:layout_constraintEnd_toStartOf="@id/iv_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_person_name" />

        <ImageView
            android:id="@+id/iv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/info_image_description"
            android:src="@drawable/outline_info_icon"
            app:layout_constraintBottom_toBottomOf="@id/materialDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_person_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>